k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: springboot-demo-svc
  namespace: springboot-demo
spec:
  selector:
    app: springboot-demo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
