k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: springboot-demo-ingress
  namespace: springboot-demo
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: example.springboot.demo
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: springboot-demo-svc
                port:
                  number: 80
